--- a/sdk/core/Azure.Core.Experimental/src/Azure.Core.Experimental.csproj
+++ b/sdk/core/Azure.Core.Experimental/src/Azure.Core.Experimental.csproj
@@ -20,5 +20,8 @@
     <Compile Include="$(AzureCoreSharedSources)HashCodeBuilder.cs" />
     <Compile Include="$(AzureCoreSharedSources)NullableAttributes.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="../../System.ClientModel/src/System.ClientModel.csproj" />
+  </ItemGroup>
 
 </Project>
