--- a/sdk/core/Azure.Core.Experimental/src/Azure.Core.Experimental.csproj
+++ b/sdk/core/Azure.Core.Experimental/src/Azure.Core.Experimental.csproj
@@ -23,5 +23,8 @@
   <ItemGroup>
     <ProjectReference Include="../../System.ClientModel/src/System.ClientModel.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="../../Azure.Core/src/Azure.Core.csproj" />
+  </ItemGroup>
 
 </Project>
